Fixed animations on Safari iOS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,33 +22,39 @@
   padding: 20px 40px;
   padding-left: calc(var(--overflow) + 20px);
   box-shadow: 0px 0 8px #00000040;
-  transition: transform 0.6s
-    linear(
-      0,
-      0.009,
-      0.035 2.1%,
-      0.141,
-      0.281 6.7%,
-      0.723 12.9%,
-      0.938 16.7%,
-      1.017,
-      1.077,
-      1.121,
-      1.149 24.3%,
-      1.159,
-      1.163,
-      1.161,
-      1.154 29.9%,
-      1.129 32.8%,
-      1.051 39.6%,
-      1.017 43.1%,
-      0.991,
-      0.977 51%,
-      0.974 53.8%,
-      0.975 57.1%,
-      0.997 69.8%,
-      1.003 76.9%,
-      1.004 83.8%,
-      1
-    );
+  transition: transform 0.6s ease-in-out;
+}
+
+@supports (animation-timing-function: linear(0, 1)) {
+  .modal {
+    transition: transform 0.6s
+      linear(
+        0,
+        0.009,
+        0.035 2.1%,
+        0.141,
+        0.281 6.7%,
+        0.723 12.9%,
+        0.938 16.7%,
+        1.017,
+        1.077,
+        1.121,
+        1.149 24.3%,
+        1.159,
+        1.163,
+        1.161,
+        1.154 29.9%,
+        1.129 32.8%,
+        1.051 39.6%,
+        1.017 43.1%,
+        0.991,
+        0.977 51%,
+        0.974 53.8%,
+        0.975 57.1%,
+        0.997 69.8%,
+        1.003 76.9%,
+        1.004 83.8%,
+        1
+      );
+  }
 }
